# autoJetsonBot

./: .data  .gitignore  AGENTS.md  CURRENT_STATUS.md  Dockerfile  Dockerfile.foxy  Dockerfile_dist  Dockerfile_foxy  PHASES.md  PROJECT_ANALYSIS.md  README.md  README_GAZEBO.md  SESSION_LOG.md  SLAM_CONFIGURATION_GUIDE.md  docker-compose.yaml  gazebo_fix.sh  gazebo_start.sh  lab_map.pgm  lab_map.yaml  launch_complete_lab.sh  launch_lab_sim.sh  launch_navigation.sh  map_1748357561.yaml  map_1748357586.pgm  quick_start.sh  readme.md  req.txt  robot.sh  robot_slam.sh  run_control.sh  run_simulation.sh  run_simulation_fixed.sh  run_tests.py  runautoros.sh  rundes.sh  runfoxyenv.sh  rungz.sh  runros.sh  runrosenv.sh  runrosenv.sh.backup  (+13 more)
.arch/src_c/: create_pkg.bash
.arch/src_c/.arch/control_hardware/: package.xml  setup.cfg  setup.py
.arch/src_c/.arch/control_hardware/config/: controller_config.yaml
.arch/src_c/.arch/control_hardware/control_hardware/: esp32_hardware_interface.py
config/: unified_robot_config.yaml
map/: lab_map_save.pgm  lab_map_save.yaml
maps/: lab_map_serial.data  map_1748357586.yaml
src/: create_pkg.bash
src/my_robot_launch/: setup.py
src/robot_body/: package.xml  setup.py
src/robot_description/: create_pkd.sh  package.xml  setup.py
src/slam_launch/: setup.py
src/web_gui_control/: setup.cfg  setup.py
test_suite/: README.md  config.py  utils.py
test_suite/hardware/: test_hardware.py
test_suite/integration/: test_docker.py  test_navigation.py  test_ros2_core.py  test_simulation.py  test_web_interface.py
(+87 files in other folders)
